--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.9.0",
     "next": "14.2.17",
     "react": "^18",
     "react-dom": "^18"
@@ -21,6 +22,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.17",
     "eslint-config-prettier": "9.1.0",
+    "mongoose": "8.8.4",
     "postcss": "^8",
     "prettier": "3.4.2",
     "tailwindcss": "^3.4.1",
